# onyx

./: .SRCINFO  .gitignore  PKGBUILD  PKGBUILD.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: NIP-XX-encrypted-file-sync.md  PLAN-opencode-chat-ui.md  PLAN-skills-library.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/desktop/: onyx.desktop
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: BacklinksPanel.tsx  Editor.tsx  FileInfoDialog.tsx  GraphView.tsx  NotificationsPanel.tsx  OpenCodeChat.tsx  OpenCodePanel.tsx  OpenCodeTerminal.tsx  PostToNostrDialog.tsx  SentSharesPanel.tsx  Settings.tsx  ShareDialog.tsx  SharedDocPreview.tsx  Sidebar.tsx
src/components/mobile/: MobileDrawer.tsx  MobileHeader.tsx  MobileNav.tsx  index.ts
src/lib/: biometric.ts  haptics.ts  platform.ts  security.ts  skills.ts  taskPlugin.ts
src/lib/editor/: asset-index.ts  backlinks.ts  block-plugin.ts  embed-plugin.ts  embed-schema.ts  embed-view.ts  link-autocomplete-plugin.ts  note-index.ts  remark-embed.ts  slash-commands.ts  upload-config.ts  wikilink-plugin.ts
src/lib/nostr/: index.ts  login.ts  nip05.ts  signer.ts  sync.ts  types.ts
src/lib/opencode/: client.ts
