[package]
name = "onyx"
version = "0.3.0"
description = "Open source knowledge base and note-taking app"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "onyx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
walkdir = "2"
parking_lot = "0.12"
notify = "6"
percent-encoding = "2.3"

[target.'cfg(not(target_os = "android"))'.dependencies]
portable-pty = "0.8"
keyring = { version = "3", features = ["sync-secret-service", "apple-native", "windows-native"] }
