[package]
name = "onyx"
version = "0.8.0"
description = "Open source knowledge base and note-taking app"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "onyx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-haptics = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-biometric = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-clipboard-manager = "2"
walkdir = "2"
parking_lot = "0.12"
notify = "6"
percent-encoding = "2.3"
reqwest = { version = "0.11", default-features = false, features = ["stream", "rustls-tls"] }
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
futures-util = "0.3"
tokio = { version = "1", features = ["fs"] }
dirs = "5.0"

[target.'cfg(target_os = "android")'.dependencies]
md5 = "0.7"

[target.'cfg(not(target_os = "android"))'.dependencies]
portable-pty = "0.8"
keyring = { version = "3", features = ["sync-secret-service", "apple-native", "windows-native"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
